# ImcPluginsCP

./: .gitignore  LICENSE  Makefile  README.rst  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
plugins/: cliprange.py  colortograybb.py  correctspilloverapply.py  correctspillovermeasurement.py  correctspillovermeasurements.py  crop_image.py  cropimage.py  deprecated_colortograybb.py  deprecated_cropimage.py  deprecated_measureimageintensitymultichannel.py  deprecated_measureobjectintensitymultichannel.py  deprecated_rescaleobjects.py  deprecated_saveimagesh5.py  deprecated_saveimagesilastik.py  deprecated_smoothmultichannel.py  deprecated_summarizestack.py  deprecated_transformbinary.py  exportvarcsv.py  mask2binstack.py  masktobinstack.py  measureimageintensitymultichannel.py  measureobjectintensitymultichannel.py  rescaleobjects.py  save_object_crops.py  saveimages_bb.py  saveimages_h5.py  saveimages_ilastik.py  saveobjectcrops.py  smoothmultichannel.py  stackimages.py  summarizestack.py  transformbinary.py
tests/: test_cliprange.py  test_colortogray_bb.py  test_correctspilloverapply.py  test_correctspillovermeasurement.py  test_cropimage.py  test_exportvarcsv.py  test_masktobinstack.py  test_measureimageintensitymultichannel.py  test_measureobjectintensitymultichannel.py  test_rescaleobjects.py  test_saveobjectcrops.py  test_smoothmultichannel.py  test_stackimages.py  test_summarizestack.py  test_transformbinary.py
tests/testdata/: imagemeta_full.csv  var_test.csv
