[tool.poetry]
name = "ImcPluginsCP"
version = "0.1.3"
description = "Plugins to facilitate multiplexed image analysis with CP"
authors = ["Vito Zanotelli <vito.zanotelli@gmail.com>",
          "Bodenmiller Lab UZH"]
license = "BSD-3 License'"
readme = "README.rst"
homepage = "https://github.com/BodenmillerGroup/ImcPluginsCP"
repository = "https://github.com/BodenmillerGroup/ImcPluginsCP"
keywords = ["ImcPluginsCP"]

[tool.poetry.dependencies]
python = "^3.8"
cellprofiler_core = "^4.0"
cellprofiler = "^4.0"
wxpython = {url = 'https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04/wxPython-4.1.0-cp38-cp38-linux_x86_64.whl'}

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
mypy = "^0.782"
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[tool.coverage.paths]
source = ["plugins"]

[tool.coverage.run]
branch = true
source = ["plugins"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

